[imad-console] Updates ui/Article-one.html

--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -1,2 +1,13 @@
 <html>
+    <head> <title>
+        Article One | Nitish Tyagi
+    </title></head>
+    <body>
+        <a href="/"> Home </a>
+        <br>
+        <hr/>
+        <br>
+        <h1> This is my Article One</h1>
+        <p> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
+    </body>
 </html>
