[imad-console] Updates ui/Article-one.html

--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -3,13 +3,16 @@
         Article One | Nitish Tyagi
     </title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link href="/ui/style.css" rel="stylesheet"/>
     </head>
     <body>
+        <div class="container">
         <a href="/"> Home </a>
         <br>
         <hr/>
         <br>
         <h1> This is my Article One</h1>
         <p> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
+    </div>
     </body>
 </html>
