[imad-console] Updates ui/Article-one.html

--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -11,8 +11,8 @@
         <br>
         <hr/>
         <br>
-        <h1> This is my Article One</h1>
-        <p> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
+        <h1 class="heading"> This is my Article One</h1>
+        <p class="paragraph"> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
     </div>
     </body>
 </html>
