--- a/ui/Article-three.html
+++ b/ui/Article-three.html
@@ -1,15 +1,18 @@
 <html>
     <head> <title>
-        Article Three | Nitish Tyagi
+        Article One | Nitish Tyagi
     </title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link href="/ui/style.css" rel="stylesheet"/>
     </head>
     <body>
+        <div class="container">
         <a href="/"> Home </a>
         <br>
         <hr/>
         <br>
-        <h1> This is my Article Three</h1>
-        <p> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> third Article </u>. I am loving doing my work here.</p>
+        <h1 class="heading"> This is my Article One</h1>
+        <p class="paragraph"> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
+    </div>
     </body>
 </html>
