--- a/ui/Article-three.html
+++ b/ui/Article-three.html
@@ -1,6 +1,6 @@
 <html>
     <head> <title>
-        Article One | Nitish Tyagi
+        Article Three | Nitish Tyagi
     </title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link href="/ui/style.css" rel="stylesheet"/>
@@ -11,8 +11,8 @@
         <br>
         <hr/>
         <br>
-        <h1 class="heading"> This is my Article One</h1>
-        <p class="paragraph"> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
+        <h1 class="heading"> This is my Article Three</h1>
+        <p class="paragraph"> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> third Article </u>. I am loving doing my work here.</p>
     </div>
     </body>
 </html>
