--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -7,12 +7,16 @@
     </head>
     <body>
         <div class="container">
+
         <a href="/"> Home </a>
         <br>
         <hr/>
-        <br>
+        <br> <div>
         <h1 class="heading"> This is my Article One</h1>
+        </div>
+        <div>
         <p class="paragraph"> Hi! My name is <b> Nitish Tyagi </b>. This is my <u> first Article </u>. I am loving doing my work here.</p>
+    </div>
     </div>
     </body>
 </html>
