[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,18 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id="picture" src="/ui/madi.png" class="img-medium"/>
+            <img id="picture" src="https://scontent.fdel8-1.fna.fbcdn.net/v/t1.0-9/20431677_1442288542514539_7039091986879341829_n.jpg?oh=445f83aaef5da8c199f6d1b528ac07df&oe=5A1F8C1D" class="img-medium"/>
         </div>
+        <hr/>
+        <h2> Personnel Information</h2>
+        <p> My name is Nitish Tyagi and I graduated from Delhi University.</p>
         <br>
-        <div class="center text-big bold">
-            Hi! I am Nitish Tyagi and this is my first webpage.
+        <hr/>
+        <h2> Professional Information </h2>
+        <p> I am learning Web Development.</p>
+        
         </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
