[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,10 @@
         <hr/>
         <h2> Professional Information </h2>
         <p> I am learning Web Development.</p>
+        <div class="footer">
+            This button <button id="counter"> click me!
+            </button> <span id="count"> o </span> times.
+        </div>
         
         </div>
     </body>
