--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         <br>
         <div class="footer">
             This button <button id="counter"> click me!
-            </button> <span id="count"> o </span> times.
+            </button> <span id="count"> 0 </span> times.
         </div>
         
         </div>
