[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,7 @@
             This button <button id="counter"> click me!
             </button> <span id="count"> 0 </span> times.
         </div>
+        <script type="text/javascript" src="/ui/main.js"></script>
         
         </div>
     </body>
