[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,8 +22,8 @@
             </button> <span id="count"> 0 </span> times.
          <hr/>
          <br>
-         <input type="text" id="name" placeholder="name"> </input>
-         <input type="submit" name="Submit"> </input>
+         <input type="text" id="name" placeholder="name"> 
+         <input type="submit" name="Submit"> 
          <hr/>
          <br>
          <ur>
