--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,8 @@
     <div>
     <input type="text" id="username" placeholder="username"/>
     <input type="password" id="password"/>
-    <input type="submit" id="submit_btn"/>
+    <input type="register" id="register_btn"/>
+    <input type="login" id="login_btn"/>
     </div>
         <div class="footer">
             
