[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,9 +24,9 @@
     <input type="text" id="username" placeholder="username"/>
     <input type="password" id="password"/>
     <br>
-    <input type="submit" id="register_btn"/>
+    <input type="submit" name="Register" id="register_btn"/>
     <br>
-    <input type="submit" id="login_btn"/>
+    <input type="submit" name="Login" id="login_btn"/>
     </div>
         <div class="footer">
             
